<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10sp"
    app:cardCornerRadius="5sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:padding="2sp">

            <TextView
                android:id="@+id/std_nm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/stdnm"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/std_crs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2sp"
                android:layout_weight="3"
                android:gravity="end"
                android:text="@string/course"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:padding="2sp">

            <TextView
                android:id="@+id/std_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="id"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/std_pnd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/pnd"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="15sp" />

        </LinearLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            style="@style/RippleStyleBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/std_pay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="2sp"
                android:layout_marginBottom="2sp"
                android:layout_weight="3"
                android:background="@drawable/btn_bg"
                android:text="\u20B9 RECEIVE"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>