<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Admin.DeveloperActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:outlineSpotShadowColor="@color/grey_1000"
        android:padding="5sp"
        app:cardCornerRadius="10sp">


        <LinearLayout
            android:id="@+id/temp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/indigo_500"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="5sp"
                android:background="@color/indigo_500"
                android:onClick="drawerBack"
                android:padding="5sp"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:background="@color/indigo_500"
                android:gravity="center"
                android:paddingLeft="5sp"
                android:text="@string/addDevPage"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/page"
        android:scrollbars="none"
        android:scrollingCache="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:paddingLeft="5sp"
                android:layout_marginTop="10sp"
                android:paddingRight="10sp"
                android:layout_height="@dimen/spacing_xmlarge"

                android:background="@color/grey_3"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_round_bg_outline"
                    android:id="@+id/ed_devnm"
                    android:hint="@string/sdevnmhint"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:textColorHint="@color/grey_20" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:paddingLeft="5sp"
                android:layout_marginTop="10sp"
                android:paddingRight="10sp"
                android:layout_height="@dimen/spacing_xmlarge"

                android:background="@color/grey_3"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_round_bg_outline"
                    android:id="@+id/ed_devcnno"
                    android:hint="@string/stdcnnohint"
                    android:inputType="number"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:textColorHint="@color/grey_20" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_done_adddev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/indigo_500"
        android:onClick="addDev"
        android:src="@drawable/ic_baseline_done"
        app:fabSize="auto" />

</RelativeLayout>